--- a/src/js/index.html
+++ b/src/js/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>React Tutorials</title>
+    <title>Nube Rooms</title>
     <!-- change this up! http://www.bootstrapcdn.com/bootswatch/ -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 
