mirror changes in readme,index.html

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="calendar-app"></div>
-    <script src="js/client.min.js"></script>
+    <script src="js/calendarApp.min.js"></script>
   </body>
 </html>
